--- a/scss/core/api/_theme.scss
+++ b/scss/core/api/_theme.scss
@@ -9,6 +9,10 @@
 @use '../helpers' as *;
 @use '../../config' as *;
 
+// --------------------------------
+//   Functions
+// --------------------------------
+
 // Get a value from the theme
 @function theme($keys...) {
   $property: list.nth($keys, 1);
