--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -5,6 +5,17 @@
 @use '../core' as *;
 @use '../reset';
 
+@if config(use-reset-styles) {
+  @include reset.styles();
+}
+
+::selection {
+  background: var(--color-accent-5);
+  color: #fff;
+}
+
 body {
-  background-color: #fff;
+  font-family: font(sans);
+  font-size: font(md);
+  font-weight: font(normal);
 }
