--- a/dev/assets/css/main.css
+++ b/dev/assets/css/main.css
@@ -537,7 +537,7 @@ a {
   padding: 2rem;
   background-color: hsl(var(--color-hsl-gray-8), 1);
   border: 2px solid hsl(var(--color-hsl-gray-6), 1);
-  border-radius: 8px;
+  border-radius: 0.25rem;
   box-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
 }
 .wrapper:hover {
@@ -561,6 +561,30 @@ a {
 
 .text {
   line-height: 1.625;
+}
+
+.loaders .loader-ring {
+  animation: loader-ring-rotate 1s linear infinite;
+  border: 4px solid #fff;
+  border-bottom-color: transparent;
+  border-radius: 50%;
+  box-sizing: border-box;
+  display: inline-block;
+  height: 48px;
+  width: 48px;
+}
+@keyframes loader-ring-rotate {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+.loaders > * + * {
+  width: 32px;
+  height: 32px;
+  color: #fff;
 }
 
 .btn {
