--- a/scss/components/loader.scss
+++ b/scss/components/loader.scss
@@ -1,3 +1,22 @@
-// https://uiball.com/loaders/
-// https://tobiasahlin.com/spinkit/
-// https://cssloaders.github.io/
+@mixin loader-ring($size: 48px, $color: #fff, $thickness: 4px, $duration: 1s) {
+  .loader-ring {
+    @keyframes loader-ring-rotate {
+      0% {
+        transform: rotate(0deg);
+      }
+
+      100% {
+        transform: rotate(360deg);
+      }
+    }
+    animation: loader-ring-rotate $duration linear infinite;
+    border: $thickness solid $color;
+    border-bottom-color: transparent;
+    border-radius: 50%;
+    box-sizing: border-box;
+    display: inline-block;
+    height: $size;
+
+    width: $size;
+  }
+}
