--- a/dev/assets/scss/_config.scss
+++ b/dev/assets/scss/_config.scss
@@ -3,7 +3,8 @@
 @use 'koi' with (
   $theme: (
     colors: (
-      secondary: yellow,
+      primary: #00ffcc,
+      secondary: #ff33e4,
     ),
     font-family: (
       heading: (
