--- a/scss/config/_theme.scss
+++ b/scss/config/_theme.scss
@@ -1,17 +1,44 @@
-// --------------------------------
-//   Default Theme
-// --------------------------------
-
 @use 'sass:map';
+
 @use 'tokens' as *;
 
-$theme: () !default;
-$default-theme: (
-  colors: (
-    primary: #0cf,
-    secondary: #f5f,
+// Light and dark theme colors
+$theme-colors: (
+  light: (
+    surface-1: map.get($tokens, colors, gray, 0),
+    surface-2: map.get($tokens, colors, white),
+    surface-3: map.get($tokens, colors, gray, 1),
+    surface-4: map.get($tokens, colors, gray, 2),
+    text-1: map.get($tokens, colors, gray, 9),
+    text-2: map.get($tokens, colors, gray, 8),
+    text-3: map.get($tokens, colors, gray, 7),
+    text-4: map.get($tokens, colors, gray, 6),
+  ),
+  dark: (
+    surface-1: map.get($tokens, colors, gray, 9),
+    surface-2: map.get($tokens, colors, gray, 8),
+    surface-3: map.get($tokens, colors, gray, 7),
+    surface-4: map.get($tokens, colors, gray, 6),
+    text-1: map.get($tokens, colors, gray, 0),
+    text-2: map.get($tokens, colors, gray, 1),
+    text-3: map.get($tokens, colors, gray, 2),
+    text-4: map.get($tokens, colors, gray, 3),
   ),
 );
 
-$default-theme: map.deep-merge($tokens, $default-theme);
-$theme: map.deep-merge($default-theme, $theme);
+$theme: () !default;
+$theme: map.deep-merge($theme-colors, $theme);
+$theme: map.deep-merge($tokens, $theme);
+
+// --------------------------------
+//   Mixins
+// --------------------------------
+
+// Outputs color scheme aware theme vars
+@mixin theming-vars($color-scheme: light) {
+  :root {
+    @each $key, $value in map.get($theme, $color-scheme) {
+      --#{$key}: $value;
+    }
+  }
+}
